<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_info"
            android:checkable="false"
            android:checked="false"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/InfoT"/>
        <item
            android:id="@+id/nav_vers"
            android:checkable="false"
            android:checked="false"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/CheckVersion"/>
    </group>

    <item android:title="@string/CommunicateT">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:checkable="false"
                android:checked="false"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/SendReport"/>
        </menu>
    </item>

</menu>
